5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_1801.log
== TEST (2019-03-24 08:15:05) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repetições:"))
print(n1*5)
-- OUTPUT:
livrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:15:35) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print(n1*n2)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:16:36) 
-- CODE:
n1 = input("Abar" + "Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print(n1*n2)
-- OUTPUT:
AbarNome do objeto:livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:16:48) 
-- CODE:
n1 = input("Abar" + "Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print(n1*n2)
-- OUTPUT:
AbarNome do objeto:livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:17:15) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra" + n1*n2)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:17:33) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra" + n1*n2 "")
-- ERROR:
File "XXXX", line 3
    print("abra" + n1*n2 "")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:17:38) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra" + n1*n2 + "")
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:18:04) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra"_+ n1*n2 + "")
-- ERROR:
File "XXXX", line 3
    print("abra"_+ n1*n2 + "")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:18:09) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra""_""+ n1*n2 + "")
-- ERROR:
File "XXXX", line 3
    print("abra""_""+ n1*n2 + "")
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:18:16) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra""_"+ n1*n2 + "")
-- OUTPUT:
abra_livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:18:36) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
print("abra"+ n1*n2)
-- EXECUTION TIME:
0.154881
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:20:05) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = (n1*n2)
print("Abra" + n3)
-- OUTPUT:
Abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:20:28) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = (n1*n2)
print("Abra"+" " + n3 + " ")
-- OUTPUT:
Abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:22:45) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = ("Abra" + " " + "n1" + " ")
n4 = (n3*n2)
print(n4)

-- OUTPUT:
Abra n1 Abra n1 Abra n1 Abra n1 Abra n1 Abra n1 Abra n1 Abra n1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 08:23:22) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = ("Abra" + " " + n1 + " ")
n4 = (n3*n2)
print(n4)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 08:23:51) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = ("Abra" + " " + n1 + " ")
n4 = (n3*n2)
print(n4)

-- EXECUTION TIME:
0.11954
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:32) 
-- CODE:
n1 = input("Nome do objeto:")
n2 = int(input("Numero de repeticoes:"))
n3 = ("Abra" + " " + n1 + " ")
n4 = (n3*n2)
print(n4)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
